# model_loader

./: CMakeLists.txt  README.md  build.sh  build_exts.sh  install_deps.sh  main.cpp
camera/: CMakeLists.txt  Makefile  cmake_install.cmake
camera/inc/camera/: fp_camera.h
camera/src/: fp_camera.cpp
graphic_control/: CMakeLists.txt  Makefile  cmake_install.cmake
graphic_control/inc/graphic_control/: program.h
graphic_control/src/: program.cpp
learngl/: CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake  main.cpp
learngl/camera/: Makefile  cmake_install.cmake
learngl/camera/inc/camera/: fp_camera.h
learngl/camera/src/: fp_camera.cpp
learngl/modeling/: CMakeLists.txt  Makefile  cmake_install.cmake
learngl/modeling/inc/modeling/: model.h
learngl/modeling/src/: mesh.cpp  model.cpp
learngl/shader_utils/: Makefile  cmake_install.cmake
learngl/shader_utils/inc/shader_tool/: exceptions.h  program.h  shader.h
learngl/shader_utils/shaders/fragment/: material.frag  multiple_lights.frag  simple_color.frag
learngl/shader_utils/shaders/vertex/: simple_color.vert
learngl/shader_utils/src/: program.cpp  shader.cpp  shader_tool.cpp
modeling/: Makefile  cmake_install.cmake  mesh.h
modeling/inc/modeling/: mesh.h  model.h
modeling/src/: mesh.cpp  model.cpp
shader_utils/: CMakeLists.txt  Makefile  cmake_install.cmake
shader_utils/inc/shader_tool/: shader.h  shader_tool.h
shader_utils/shaders/fragment/: frame_buffer.frag  gouruad.frag  model.frag  phong.frag  sampler.frag  simple2.frag
shader_utils/shaders/vertex/: frame_buffer.vert  gouruad.vert  phong.vert  sampler.vert  simple2.vert
shader_utils/src/: program.cpp  shader.cpp
tests/: CMakeLists.txt  main.cpp
tests/test_data/: CubeMeshShot.tga  ModelMeshShot.tga
